--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "uglify-js": "^2.6.2"
   }
 }
