--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "blyde",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A blade-sharp javascript library that provides serval simple jQuery like operations",
-  "main": "build.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ClassicOldSong/Blyde.git"
@@ -24,6 +23,9 @@
     "babel-preset-es2015": "^6.6.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-uglify": "^1.5.3",
     "uglify-js": "^2.6.2"
   }
 }
