--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "blyde",
-  "version": "0.1.0-alpha.4",
+  "version": "0.1.0-alpha.5",
   "description": "A blade-sharp javascript library that provides serval simple jQuery like operations",
   "main": "dist/blyde.js",
   "scripts": {
-    "test": "gulp",
-    "dev": "gulp",
-    "build": "gulp"
+    "dev": "node ./build/dev-server.js",
+    "build": "node ./build/build.js",
+    "lint": "eslint --ext .js src"
   },
   "repository": {
     "type": "git",
@@ -25,13 +25,26 @@
   },
   "homepage": "https://github.com/ClassicOldSong/Blyde#readme",
   "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-uglify": "^1.5.3",
-    "uglify-js": "^2.6.2"
+    "babel-cli": "^6.18.0",
+    "babel-plugin-external-helpers": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015-rollup": "^1.2.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "browser-sync": "^2.17.5",
+    "debug": "^2.3.2",
+    "eslint": "^3.9.1",
+    "node-watch": "^0.4.1",
+    "rollup": "^0.36.3",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-eslint": "^3.0.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-postcss": "^0.2.0",
+    "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-uglify": "^1.0.1",
+    "shelljs": "^0.7.5"
+  },
+  "dependencies": {
+    "debug": "^2.3.2"
   }
 }
