--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blyde",
-  "version": "0.1.0-alpha.6",
+  "version": "0.1.0-alpha.7",
   "description": "A blade-sharp javascript library that provides serval simple jQuery like operations",
   "main": "dist/blyde.min.js",
   "scripts": {
@@ -26,12 +26,9 @@
   "homepage": "https://github.com/ClassicOldSong/Blyde#readme",
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-plugin-external-helpers": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015-rollup": "^1.2.0",
     "babel-preset-stage-3": "^6.17.0",
     "browser-sync": "^2.17.5",
-    "classlist-polyfill": "^1.0.3",
     "debug": "^2.3.2",
     "eslint": "^3.9.1",
     "node-watch": "^0.4.1",
@@ -43,7 +40,6 @@
     "rollup-plugin-postcss": "^0.2.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "^1.0.1",
-    "shelljs": "^0.7.5",
-    "debug": "^2.3.2"
+    "shelljs": "^0.7.5"
   }
 }
