--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
 	"presets": ["es2015-rollup", "stage-3"],
+	"plugins": [
+		["transform-runtime", {
+			"polyfill": true
+		}],
+		"external-helpers"
+	],
 	"comments": false
 }
