Fixed plugin loading issue, completed snapshot method, added closure and TOC optimization.

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,8 @@
 		["transform-runtime", {
 			"polyfill": true
 		}],
+		"closure-elimination",
+		"tailcall-optimization",
 		"external-helpers"
 	],
 	"comments": false
