--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
-	"presets": ["es2015-rollup", "stage-3"],
+	"presets": [
+		["es2015",
+		{
+			"modules": false
+    }],
+		"stage-2"
+	],
 	"plugins": [
 		["transform-runtime", {
 			"polyfill": true
