--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blyde",
-  "version": "0.1.0-alpha.18",
+  "version": "0.1.0-alpha.19",
   "description": "A blade-sharp javascript library that provides serval simple jQuery like operations",
   "main": "dist/blyde.min.js",
   "scripts": {
@@ -30,8 +30,8 @@
     "babel-plugin-external-helpers": "^6.18.0",
     "babel-plugin-tailcall-optimization": "^1.0.11",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015-rollup": "^1.2.0",
-    "babel-preset-stage-3": "^6.17.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
     "browser-sync": "^2.17.5",
     "eslint": "^3.9.1",
     "git-rev-sync": "^1.8.0",
