--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rollup-plugin-eslint": "^3.0.0",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-postcss": "^0.2.0",
+    "rollup-plugin-progress": "^0.1.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "^1.0.1",
     "shelljs": "^0.7.5"
